--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -87,7 +87,7 @@
 }
 .nav__icons .profile .profile__actions {
   position: absolute;
-  top: 100%;
+  top: 98%;
   left: 0;
   width: 150px;
   z-index: 10;
@@ -97,7 +97,7 @@
   flex-direction: column;
   background: var(--card-bg-01);
   line-height: 30px;
-  display: none;
+  /* display: none; */
   cursor: pointer;
 }
 .show__profileActions{
